# HaskeLLM

./: .gitignore  3d6-dropout_mask.json  3d6-dropout_masks-3_5_11.json  3d6-dropout_masks-3_5_12.json  3d6-dropout_masks-3_5_13.json  3d6-dropout_masks.json  3d6-out_projections-3_5_14.json  3d6-token_embeddings-3.3.1.json  3d6-token_embeddings.json  3d6-weights-3_4_10.json  3d6-weights-3_5_11.json  3d6-weights-3_5_12.json  3d6-weights.json  6_token-vocab.json  Makefile  cabal.project  htrain.cabal
Text/: LLM.hs
programs/: trainLLM.hs
