cabal-version: 3.0
name:          htrain
version:       0.0.1
license:       AGPL-3.0-or-later
license-file:  LICENSE
maintainer:    Julia Longtin <julia.longtin@gmail.com>
author:        Julia Longtin <julia.longtin@gmail.com>
tested-with:   GHC == 9.0.2
homepage:      https://claif.org/
synopsis:      A trivial LLM training system.
description:   An LLM training system, based on the book "training an llm(from scratch)".
category:      AI
build-type:    Simple

source-repository head
    type:     git
    location: https://gitlab.com/julialongtin/htrain.git

library
    exposed-modules:
	AI.train

    other-modules:
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -optc-O3 -feager-blackholing -fwrite-ide-info -hiedir=.hie
        -fexcess-precision -Wall -Wextra -Wcompat
        -Wmonomorphism-restriction -Wmissing-signatures
        -Wmissing-export-lists -Wmissing-import-lists
        -Wmissing-home-modules -Widentities -Wimplicit-prelude
        -Wredundant-constraints -Wall-missed-specialisations

    build-depends:
        base <5.0,
        split

executable trainLLM
    main-is:            trainLLM.hs
    hs-source-dirs:     programs
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -threaded -rtsopts "-with-rtsopts -N -qg -t" -optc-O3
        -feager-blackholing -fwrite-ide-info -hiedir=.hie -Wall -Wextra
        -Wcompat -Wmonomorphism-restriction -Wmissing-signatures
        -Wmissing-export-lists -Wmissing-import-lists
        -Wmissing-home-modules -Widentities -Wimplicit-prelude
        -Wredundant-constraints -Wall-missed-specialisations

    build-depends:
        base <5.0,
        aeson,
        optparse-applicative -any,
        split,
        Unique,
        vector


test-suite test-htrain
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     tests
    other-modules:

    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -threaded -rtsopts "-with-rtsopts -N -qg -t" -optc-O3
        -feager-blackholing -fwrite-ide-info -hiedir=.hie -Wall -Wextra
        -Wcompat -Wmonomorphism-restriction -Wmissing-signatures
        -Wmissing-export-lists -Wmissing-import-lists
        -Wmissing-home-modules -Widentities -Wimplicit-prelude
        -Wredundant-constraints -Wall-missed-specialisations

    build-depends:
        base <5.0

